--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<iframe src="//cocchat.github.io/" frameborder="0" marginheight="0" marginwidth="0" width="100%" height="450"></iframe><p><a href="https://chatovod.ru/">Бесплатный чат для вашего сайта.</a></p>
+<iframe src="//cocchat.github.io/" frameborder="0" marginheight="0" marginwidth="0" width="100%" height="450"></iframe>
