--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<iframe src="//cocchat.github.io/" frameborder="0" marginheight="0" marginwidth="0" width="100%" height="450"></iframe>
+<iframe src="//fgdgfdgd.chatovod.ru/" frameborder="0" marginheight="0" marginwidth="0" width="100%" height="450"></iframe>
