--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
 							<!--Navigation-->
 							<div class="list-group2">
 								<h1>Навигация</h1>
-								<a href="programs.html">
+								<a href="mews.html">
 									<i class="programiconsmenu"></i>
 									Новости
 									<span>196</span>
 								</a>
-								<a href="games.html">
+								<a href="chat.html">
 									<i class="gameiconsmenu"></i>
 									Чат
 									<span>108</span>
