--- a/chat.html
+++ b/chat.html
@@ -55,12 +55,12 @@
 							<!--Navigation-->
 							<div class="list-group2">
 								<h1>Навигация</h1>
-								<a href="news.html" class="activelist">
+								<a href="news.html">
 									<i class="programiconsmenu"></i>
 									Новости
 									
 								</a>
-								<a href="chat.html">
+								<a href="chat.html"class="activelist">
 									<i class="gameiconsmenu"></i>
 									Чат
 									
